--- a/package/extra/cpulimit/Makefile
+++ b/package/extra/cpulimit/Makefile
@@ -1,26 +1,30 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=cpulimit
-PKG_VERSION:=95c20b7830720f5c355e50a96f9868c7749396b5
 PKG_RELEASE:=1
 
-include $(INCLUDE_DIR)/package.mk
+PKG_SOURCE_PROTO:=git
+PKG_SOURCE_URL:=https://github.com/HiGarfield/cpulimit.git
+PKG_SOURCE_VERSION:=0ca578d6470a6f1d7e6fe620f3c53f8174a65b2a
+PKG_MIRROR_HASH:=1c7991589a236043e5815518727957953425454ec951e0bda8516840d9ab0e65
 
-UNAME:=Linux
+include $(INCLUDE_DIR)/package.mk
 
 define Package/cpulimit
   CATEGORY:=Utilities
   TITLE:=cpulimit
-  URL:=https://github.com/opsengine/cpulimit.git
+  URL:=https://github.com/HiGarfield/cpulimit.git
   DEPENDS:= +librt
 endef
 
+MAKE_PATH:=src
+MAKE_VARS += UNAME="Linux"
 TARGET_CFLAGS += -ffunction-sections -fdata-sections -flto
 TARGET_LDFLAGS += -lrt -Wl,--gc-sections,--as-needed -flto
 
 define Package/cpulimit/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/cpulimit $(1)/usr/bin
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/$(MAKE_PATH)/cpulimit $(1)/usr/bin
 endef
 
 $(eval $(call BuildPackage,cpulimit))
